# solitext

./: Cargo.toml  README.md  REVIEW.md  TODO.md  cross-platform-terminal.md  index.html  refactor-termion.md
.github/workflows/: pages.yml
crates/solitext-core/: Cargo.toml
crates/solitext-core/src/: cards.rs  draw.rs  game_logic.rs  game_state.rs  lib.rs  terminal.rs  terminal_mock.rs  terminal_termion.rs  tui.rs
crates/solitext-core/src/draw/: card.rs  card_column.rs  common.rs  deck.rs  foundation.rs  game_state.rs  info.rs  tui.rs
crates/solitext-core/src/terminal/: mod.rs  termion_impl.rs
crates/solitext-local/: Cargo.toml
crates/solitext-local/src/: main.rs  terminal.rs  terminal_impl.rs  terminal_termion.rs
crates/solitext-web/: Cargo.toml
crates/solitext-web/src/: main.rs  terminal.rs  terminal_impl.rs
src/: app.rs  cards.rs  draw.rs  game_logic.rs  game_state.rs  main.rs  selection.rs  tui.rs  web.rs
src/draw/: card.rs  card_column.rs  common.rs  deck.rs  foundation.rs  game_state.rs  info.rs
