[workspace]
members = [
    "crates/solitext-core",
    "crates/solitext-local",
    "crates/solitext-web",
]
resolver = "3"

[workspace.package]
version = "0.4.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
rand = "0.9.0"
strum = { version = "0.27.1", features = ["derive"] }
test-case = "3.3.1"
solitext-core = { path = "crates/solitext-core" }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
