[package]
name = "solitext"
version = "0.4.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.10.0"
strum = { version = "0.28.0", features = ["derive"] }
ratatui = "0.30.0"
test-case = "3.3.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
