[package]
name = "solitext"
version = "0.4.0"
edition = "2024"

[features]
default = ["native"]
native = ["ratatui/crossterm"]
web = ["dep:ratzilla"]

[dependencies]
rand = "0.10.0"
strum = { version = "0.28.0", features = ["derive"] }
ratatui = { version = "0.30.0", default-features = false }
test-case = "3.3.1"
ratzilla = { version = "0.3.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
